adding projection to query execution + functional order status + minor type fixes in data types + richer experiment metric data